fix: update notebook metadata

--- a/fcc_sms_text_classification.ipynb
+++ b/fcc_sms_text_classification.ipynb
@@ -5,6 +5,9 @@
       "execution_count": null,
       "metadata": {
         "id": "8RZOuS9LWQvv"
+        "language_info": {
+          "name": "python",
+        }
       },
       "outputs": [],
       "source": [
