fix: update notebook metadata

--- a/fcc_sms_text_classification.ipynb
+++ b/fcc_sms_text_classification.ipynb
@@ -40,6 +40,9 @@
       "execution_count": null,
       "metadata": {
         "id": "lMHwYXHXCar3"
+        "language_info": {
+          "name": "python",
+        }
       },
       "outputs": [],
       "source": [
@@ -56,6 +59,9 @@
       "execution_count": null,
       "metadata": {
         "id": "g_h508FEClxO"
+        "language_info": {
+          "name": "python",
+        }
       },
       "outputs": [],
       "source": [
@@ -97,6 +103,9 @@
       "execution_count": null,
       "metadata": {
         "id": "zOMKywn4zReN"
+        "language_info": {
+          "name": "python",
+        }
       },
       "outputs": [],
       "source": [
@@ -157,6 +166,9 @@
       ],
       "metadata": {
         "id": "2sg-8NEEouVx"
+        "language_info": {
+          "name": "python",
+        }
       },
       "execution_count": null,
       "outputs": []
@@ -166,6 +178,9 @@
       "execution_count": null,
       "metadata": {
         "id": "J9tD9yACG6M9"
+        "language_info": {
+          "name": "python",
+        }
       },
       "outputs": [],
       "source": [
@@ -196,6 +211,9 @@
       "execution_count": null,
       "metadata": {
         "id": "Dxotov85SjsC"
+        "language_info": {
+          "name": "python",
+        }
       },
       "outputs": [],
       "source": [
